[tool.poetry]
name = "python_scripts"
version = "0.1.0"
description = "MIT"
authors = ["FranciscoKloganB <francisco.teixeira.de.barros@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
black = "^21.6b0"
progressbar = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
